--- a/NorthMVC/Views/Category/Index.cshtml
+++ b/NorthMVC/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-md-10 col-md-offset-2">
         <div class="row">
             <div class="col-md-2">
-                <a href="@Url.Action("Yeni")" class="btn btn-success btn-block" role="button">Yeni Kategori Ekle</a>
+                <a href="@Url.Action("Yeni")" class="btn btn-success btn-block" role="button">Yeni Kategori</a>
             </div>
         </div>
         <table class="table table-hover">
