--- a/NorthMVC/Views/_LayoutPage1.cshtml
+++ b/NorthMVC/Views/_LayoutPage1.cshtml
@@ -30,7 +30,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="@Url.Action("Index","Home")">Ana Sayfa</a></li>
                             <li><a href="@Url.Action("Index","Category")">Kategoriler</a></li>
-                            <li><a href="#">Link</a></li>
+                            <li><a href="@Url.Action("Index","Product")">Ürünler</a></li>
                         </ul>
                     </div>
                 </div>
