--- a/NorthMVC/Views/Category/Index.cshtml
+++ b/NorthMVC/Views/Category/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Tüm Kategoriler";
     Layout = "~/Views/_LayoutPage1.cshtml";
 }
-
+@*deneme*@
 <div class="row">
     <div class="col-md-10 col-md-offset-2">
         <div class="row">
