--- a/NorthMVC/Views/Product/Detay.cshtml
+++ b/NorthMVC/Views/Product/Detay.cshtml
@@ -10,7 +10,7 @@
             <div class="form-group">
                 @Html.LabelFor(x => x.Category.CategoryName, new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-10">
-                    @Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.Kategoriler)
+                    @Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.Kategoriler,new { @class = "form-control" })
                 </div>
             </div>
 
