--- a/NorthMVC/Views/_LayoutPage1.cshtml
+++ b/NorthMVC/Views/_LayoutPage1.cshtml
@@ -49,6 +49,7 @@
 
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/app.js"></script>
 </body>
 </html>
