--- a/NorthMVC/Views/Product/Index.cshtml
+++ b/NorthMVC/Views/Product/Index.cshtml
@@ -4,63 +4,85 @@
     Layout = "~/Views/_LayoutPage1.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-10 col-md-offset-2">
-        <div class="row">
-            <div class="col-md-2">
-                <a href="@Url.Action("Yeni")" class="btn btn-info btn-block" role="button">Yeni Ürün</a>
-            </div>
+<div ng-app="north">
+    <div class="row" ng-controller="sepetCtrl">
+        <div class="col-md-3">
+            <input type="text" class="form-control" ng-model="ara" />
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="urun in sepet | filter:ara">
+                    {{urun.name}}-{{urun.count}} adet <br />
+                    {{urun.count*urun.price}} ₺
+                </li>
+            </ul>
+            <h4 class="text-center text-success" ng-if="total!=0">Toplam: {{total}} ₺</h4>
+            <h4 class="text-center text-primary" ng-if="total==0">Sepete Ürün Ekleyin</h4>
+            <br />
+            <input type="button" value="Sepeti Temizle" class="btn btn-sm btn-danger"
+                   ng-click="sepetitemizle()"
+                   ng-if="total!=0" />
         </div>
-        <table class="table table-hover">
-            <thead>
-                <tr class="success">
-                    <th>#</th>
-                    <th>Ürün Adı</th>
-                    <th>Fiyat</th>
-                    <th>Adedi</th>
-                    <th>Stok</th>
-                    <th>Kategorisi</th>
-                    <th>Düzenle</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    int sayac = 0;
-                    string durum = "";
-                }
-                @foreach (var item in Model)
-                {
-                    sayac++;
-                    if (item.UnitsInStock == 0)
-                    { durum = "danger"; }
-                    else if (item.UnitsInStock > 0 && item.UnitsInStock <= 10)
-                    { durum = "warning"; }
-                    else if (item.UnitsInStock > 10 && item.UnitsInStock <= 20)
-                    { durum = "info"; }
-                    else
-                    { durum = "success"; }
-                    <tr class="@durum">
-                        <th scope="row">@sayac</th>
-                        <td>@item.ProductName</td>
-                        <td>@string.Format("{0:c2}", item.UnitPrice)</td>
-                        <td>@item.QuantityPerUnit</td>
-                        <td>@item.UnitsInStock</td>
-                        <td>@(item.CategoryID == null ? "Kategorisi Yok" : item.Category.CategoryName)</td>
-                        <td>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <a href="@Url.Action("Detay", "Product", new { id = item.ProductID })" class="btn btn-success btn-block"
-                                       role="button">Düzenle</a>
-                                </div>
-                                <div class="col-md-6">
-                                    <a href="@Url.Action("Sil", "Product", new { id = item.ProductID })" class="btn btn-warning btn-block"
-                                       role="button">Sil</a>
-                                </div>
-                            </div>
-                        </td>
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="@Url.Action("Yeni")" class="btn btn-info btn-block" role="button">Yeni Ürün</a>
+                </div>
+            </div>
+            <table class="table table-hover">
+                <thead>
+                    <tr class="success">
+                        <th>#</th>
+                        <th>Ürün Adı</th>
+                        <th>Fiyat</th>
+                        <th>Adedi</th>
+                        <th>Stok</th>
+                        <th>Kategorisi</th>
+                        <th>Düzenle</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @{
+                        int sayac = 0;
+                        string durum = "";
+                    }
+                    @foreach (var item in Model)
+                    {
+                        sayac++;
+                        if (item.UnitsInStock == 0)
+                        { durum = "danger"; }
+                        else if (item.UnitsInStock > 0 && item.UnitsInStock <= 10)
+                        { durum = "warning"; }
+                        else if (item.UnitsInStock > 10 && item.UnitsInStock <= 20)
+                        { durum = "info"; }
+                        else
+                        { durum = "success"; }
+                        <tr class="@durum">
+                            <th scope="row">@sayac</th>
+                            <td>@item.ProductName</td>
+                            <td>@string.Format("{0:c2}", item.UnitPrice)</td>
+                            <td>@item.QuantityPerUnit</td>
+                            <td>@item.UnitsInStock</td>
+                            <td>@(item.CategoryID == null ? "Kategorisi Yok" : item.Category.CategoryName)</td>
+                            <td>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <a href="@Url.Action("Detay", "Product", new { id = item.ProductID })" class="btn btn-success btn-block btn-sm"
+                                           role="button">Düzenle</a>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <a href="@Url.Action("Sil", "Product", new { id = item.ProductID })" class="btn btn-warning btn-block btn-sm"
+                                           role="button">Sil</a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <input type="button" value="Sepete Ekle" class="btn btn-info btn-block" ng-click="sepeteekle(@item.ProductID)" />
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
